# Multi-robot_Control_Gazebo

./: .gitmessage.txt  README.md
common/copernic_simu/copernic_gazebo/: CMakeLists.txt  package.xml
common/copernic_simu/copernic_gazebo/launch/pioneer_3dx/: control.yaml  p3dx_control.launch  p3dx_gazebo.launch  p3dx_gazebo_massive.launch  p3dx_joy.launch  pioneer3dx.yaml  spawn_p3dx.launch
common/copernic_simu/ground_truth_manager/: CMakeLists.txt  package.xml
common/copernic_simu/ground_truth_manager/src/: ground_truth_manager.cpp
control/control_position/control_position_msgs/: CMakeLists.txt  package.xml
control/control_position/control_position_msgs/msg/: AccelerationYawrate.msg  CommandTrajectory.msg  ControllerFeedback.msg  ControllerMode.msg  ControllerReference.msg  TeleopVisualisation.msg
control/control_position/control_position_msgs/rules/: ControllerFeedback.bak0  control_mode.bmr  control_position.bmr
control/control_position/control_position_msgs/scripts/: waypoint_translator.py
control/control_position/control_position_msgs/srv/: AutoThrust.srv  EmergencySIP.srv
control/mobile_robot_controller/: CMakeLists.txt  package.xml
control/mobile_robot_controller/cfg/: MobileRobotController.cfg
control/mobile_robot_controller/include/: communicator.hpp  controller.hpp  delaySim.hpp  parameter_updates.yaml
control/mobile_robot_controller/launch/: mobile_robot_control.launch  mobile_robot_params.yaml
control/mobile_robot_controller/src/: controller_node.cpp  delayComm.cpp  delay_node.cpp  mobile_robot_controller.cpp
hardware/p3dx-sim/p3dx_description/: CMakeLists.txt  package.xml
hardware/p3dx-sim/p3dx_description/urdf/: pioneer3dx.gazebo  pioneer3dx.xacro  pioneer3dx_2.gazebo.xacro  pioneer3dx_2.xacro  pioneer3dx_wheel_2.urdf.xacro  pioneer3dx_wheel_2.xacro
hardware/p3dx-sim/p3dx_gazebo/launch/: pioneer3dx.launch
