<?xml version="1.0"?>
<package>
  <name>ground_truth_manager</name>
  <version>0.1.0</version>
  <description> Translates gazebo joint msg in separate odoms </description>

  <maintainer email="julien.marzat@onera.fr">Julien Marzat</maintainer>

  <license>ONERA</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>

</package>
